--- a/frontend/edusia/package.json
+++ b/frontend/edusia/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.4",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
